--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,24 +1,22 @@
 {
     "workbench.colorCustomizations": {
-        "activityBar.activeBackground": "#93e6fc",
-        "activityBar.background": "#93e6fc",
-        "editorError.foreground": "#000000ff",
-        "editorGroup.border": "#93e6fc",
-        "editorInfo.foreground": "#000000ff",
-        "editorWarning.foreground": "#000000ff",
-        "panel.border": "#93e6fc",
-        "sash.hoverBorder": "#93e6fc",
-        "sideBar.border": "#93e6fc",
-        "statusBar.background": "#61dafb",
-        "statusBar.border": "#61dafb",
-        "statusBar.debuggingBackground": "#fb8261",
-        "statusBar.debuggingBorder": "#fb8261",
-        "statusBarItem.hoverBackground": "#2fcefa",
-        "statusBarItem.remoteBackground": "#61dafb",
-        "tab.activeBorder": "#93e6fc",
-        "titleBar.activeBackground": "#61dafb",
-        "titleBar.border": "#61dafb",
-        "titleBar.inactiveBackground": "#61dafb99"
+        "activityBar.activeBackground": "#f5aeae",
+        "activityBar.background": "#f5aeae",
+        "sash.hoverBorder": "#f5aeae",
+        "statusBar.background": "#f08080",
+        "statusBarItem.hoverBackground": "#eb5252",
+        "statusBarItem.remoteBackground": "#f08080",
+        "titleBar.activeBackground": "#f08080",
+        "titleBar.inactiveBackground": "#f0808099",
+        "activityBar.foreground": "#15202b",
+        "activityBar.inactiveForeground": "#15202b99",
+        "activityBarBadge.background": "#128e12",
+        "activityBarBadge.foreground": "#e7e7e7",
+        "commandCenter.border": "#15202b99",
+        "statusBar.foreground": "#15202b",
+        "statusBarItem.remoteForeground": "#15202b",
+        "titleBar.activeForeground": "#15202b",
+        "titleBar.inactiveForeground": "#15202b99"
     },
-    "peacock.color": "#61dafb"
+    "peacock.color": "#F08080"
 }
